Styling issue: when there images do not perfectly fit on the screen, main products were not centered. Now fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -116,10 +116,11 @@ a:hover {
 
 .products {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   padding: 1rem;
+  margin: auto auto;
 }
 
 .products li {
